Fixed announcement date and uncovered more bugs which are resolved. Working on HTTP methods for announcements.

--- a/client/src/react-components/HomePage/Announcement/styles.css
+++ b/client/src/react-components/HomePage/Announcement/styles.css
@@ -22,3 +22,11 @@
 .toast-header > button{
   display: none !important;
 }
+
+#modify-announcement-button{
+    margin-left: 20px;
+}
+
+#delete-announcement-button{
+    float: right;
+}
